e2e/fixtures/non-palindrome-pod-descriptor.yml
apiVersion: v1
kind: Pod
metadata:
  name: non-palindrome-pod
spec:
  containers:
    - name: hello
      image: hello-world:latest
